# SOS_SWORDforWeb

./: CHANGELOG.md  LICENSE.md  README.md  SOSTransient.js  index.html  psg.wasm  sos.wasm
css/: catMediaIcon.css  catSystemIcon.css  catTextScreen.css  catVolume.css  sosLogo.css
fonts/N-Font/: Example.txt  Readme.txt  Sample.txt
js/: taskMonitor.js  z80Emu.js
js/HuBasic/Disk/: DataController.mjs  DiskError.mjs  DiskImage.mjs  DiskParameter.mjs  DiskType.mjs  DiskTypeEnum.mjs  SectorData.mjs  TrackFormat.mjs
js/HuBasic/Disk/D88/: D88Types.mjs  DiskImageReaderD88.mjs  DiskImageWriterD88.mjs
js/HuBasic/Disk/Raw/: DiskImageReaderRaw.mjs  DiskImageWriterRaw.mjs
js/HuBasic/HuBasic/: Context.mjs  HuBasicDisk.mjs  HuBasicDiskEntry.mjs  HuBasicDiskImage.mjs  HuFileEntry.mjs  OpenEntryResult.mjs  OptionType.mjs  RunModeTypeEnum.mjs  Setting.mjs
js/HuBasic/Utils/: Log.mjs  LogData.mjs  LogType.mjs  MiniOption.mjs  Stream.mjs
js/cat/: catAudio.js  catAudioWorkletProcessor.js  catDisZ80.js  catFont2Img.js  catFullScreen.js  catGamePad.js  catKey.js  catTextScreen.js  catTextScreenLayer.js  catTextScreenLayerControler.js
js/sos/: SOS.js  SOSBatchManager.js  SOSErrorCode.js  SOSInfomationBlock.js  SOSKeyCode.js  SOSTransient.js  SOSWorkAddr.js  taskContext.js  taskLineInput.js  taskPlatformMonitor.js  util.mjs
js/sos/config/: KeyConfig.js
sos/: CMakeLists.txt
sos/src/: clang.cpp  ctc.h  debug.cpp  main.cpp  mkWebAsm.bat  platform.cpp  platform.h  psg.cpp  psg.wasm  sos.cpp  sos.h  sos.wasm
sos/src/cat/low/: catLowBasicTypes.h  catLowMemory.cpp  catLowMemory.h
sos/src/emu2413/: emu2149.cpp  emu2149.h
sos/src/fmgen/: diag.h  file.cpp  file.h  fmgen.cpp  fmgen.h  fmgen_types.h  fmgeninl.h  fmtimer.cpp  fmtimer.h  headers.h  misc.h  opm.cpp  opm.h  opna.cpp  opna.h  psg.cpp  psg.h  readme.txt  変更点.txt
sos/src/platform/: catPlatformBase.h  catPlatformFactory.cpp  catPlatformFactory.h  catPratformTarget.h
sos/src/platform/MZ700/: cat8253.cpp  cat8253.h  catPlatformMZ700.cpp  catPlatformMZ700.h
sos/src/platform/X1/: catCRTC.cpp  catCRTC.h  catPCG.cpp  catPCG.h  catPlatformX1.cpp  catPlatformX1.h
sos/src/platform/device/: catCtc.cpp  catCtc.h  catIntel8253.cpp  catIntel8253.h  catOPM.cpp  catPsg.cpp  catTape.cpp  catTape.h  catTapeImage.cpp  psg.cpp
sos/src/z80/: z80.hpp
test/: SOS_TEST.d88  mk.bat  test8255.lst  test8255.z80  testASCII.lst  testASCII.z80  testBatErr.lst  testBatErr.z80  testCTC.lst  testCTC.z80  testFLGet.lst  testFLGet.z80  testGRAM.lst  testGRAM.z80  testMZ700.lst  testMZ700.z80  testPad.lst  testPad.z80  testPause.lst  testPause.z80  testRopen.lst  testRopen.z80  testWopen.lst  testWopen.z80
